Splitting code into multiple files

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <title>Hello World</title>
 
 <script type="application/javascript" src="main.js"></script>
+<script type="application/javascript" src="image.js"></script>
+<script type="application/javascript" src="audio.js"></script>
 </head>
 
 <body>
