Basic wall drawing

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <script type="application/javascript" src="main.js"></script>
 <script type="application/javascript" src="image.js"></script>
 <script type="application/javascript" src="audio.js"></script>
+<script type="application/javascript" src="wall.js"></script>
 </head>
 
 <body>
