--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <script type="application/javascript" src="image.js"></script>
 <script type="application/javascript" src="audio.js"></script>
 <script type="application/javascript" src="wall.js"></script>
+<script type="application/javascript" src="spell.js"></script>
+<script type="application/javascript" src="enemy.js"></script>
 </head>
 
 <body>
