--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <script type="application/javascript" src="input.js"></script>
 <script type="application/javascript" src="image.js"></script>
 <script type="application/javascript" src="audio.js"></script>
+<script type="application/javascript" src="player.js"></script>
 <script type="application/javascript" src="wall.js"></script>
 <script type="application/javascript" src="spell.js"></script>
 <script type="application/javascript" src="enemy.js"></script>
