--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <script type="application/javascript" src="wall.js"></script>
 <script type="application/javascript" src="spell.js"></script>
 <script type="application/javascript" src="enemy.js"></script>
+<script type="application/javascript" src="camera.js"></script>
 </head>
 
 <body>
