--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <script type="application/javascript" src="spell.js"></script>
 <script type="application/javascript" src="enemy.js"></script>
 <script type="application/javascript" src="camera.js"></script>
+<script type="application/javascript" src="world.js"></script>
 </head>
 
 <body>
