--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <script type="application/javascript" src="enemy.js"></script>
 <script type="application/javascript" src="camera.js"></script>
 <script type="application/javascript" src="world.js"></script>
+<script type="application/javascript" src="smallkeys.js"></script>
 </head>
 
 <body>
