--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 <script type="application/javascript" src="camera.js"></script>
 <script type="application/javascript" src="world.js"></script>
 <script type="application/javascript" src="smallkeys.js"></script>
+<script type="application/javascript" src="spikes.js"></script>
+<script type="application/javascript" src="spike_block.js"></script>
 </head>
 
 <body>
