--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <script type="application/javascript" src="smallkeys.js"></script>
 <script type="application/javascript" src="spikes.js"></script>
 <script type="application/javascript" src="spike_block.js"></script>
+<script type="application/javascript" src="laser.js"></script>
 </head>
 
 <body>
