--- a/index.html
+++ b/index.html
@@ -89,15 +89,25 @@ Your browser does not support the HTML5 canvas tag.
 
 <h2>About</h2>
 
-<p>This game was made by Tommy and Eli as part of a game 
-jam that went from Saturday, June 21 to Sunday, June 22, 
-2014. No external libraries or frameworks were used.</p>
-
 <p>You can control Mia using the w, a, s, and d keys. Left
 click with the mouse to cast a fireball spell next to Mia.</p>
 
 <p>Your goal is to navigate the Perilous Swamps and make it
 out the other end alive.</p>
+
+<h2>Development</h2>
+
+<p>This game was made by Tommy and Eli as part of a game 
+jam that went from Saturday, June 21 to Sunday, June 22, 
+2014. No external libraries or frameworks were used.</p>
+
+<p>The background music was composed by Tommy using
+<a href="http://www.noteworthysoftware.com">Noteworthy Composer</a>. 
+The sounds were created by Eli using
+<a href="http://www.bfxr.net">Bfxr</a>. Both Eli and Tommy created the artwork using 
+<a href="http://www.gimp.org/">GIMP</a> and <a href="http://www.humanbalance.net/gale/us/">Graphics Gale</a>. 
+The project was managed using <a href="http://git-scm.com/">Git</a> through the
+<a href="https://bitbucket.org/">BitBucket</a> service.</p>
 
 <h2>Contact</h2>
 
