Added Audacity to credits

--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@ jam that went from Saturday, June 21 to Sunday, June 22,
 <p>The background music was composed by Tommy using
 <a href="http://www.noteworthysoftware.com">Noteworthy Composer</a>. 
 The sounds were created by Eli using
-<a href="http://www.bfxr.net">Bfxr</a>. Both Eli and Tommy created the artwork using 
+<a href="http://www.bfxr.net">Bfxr</a>. Both Eli and Tommy used 
+<a href="http://audacity.sourceforge.net/">Audacity</a> to finish the sound. The artwork was created with 
 <a href="http://www.gimp.org/">GIMP</a> and <a href="http://www.humanbalance.net/gale/us/">Graphics Gale</a>. 
 The project was managed using <a href="http://git-scm.com/">Git</a> through the
 <a href="https://bitbucket.org/">BitBucket</a> service.</p>
