Added linkback to game jam index to index.html

--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@ p {
 
 <h1>Mia the Mage</h1>
 
+<p><a href="../">Back to Game Jam index</a></p>
+
 <canvas id="myCanvas" width="800" height="480">
 Your browser does not support the HTML5 canvas tag.
 </canvas>
