tweaked some more instance of "Mia" to be "Duo" instead

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ p {
 
 <div id="center">
 
-<h1>Mia the Mage</h1>
+<h1>Duo the Mage</h1>
 
 <div id="multiplayer_root_div"></div>
 
@@ -94,8 +94,8 @@ Your browser does not support the HTML5 canvas tag.
 
 <h2>About</h2>
 
-<p>You can control Mia using the w, a, s, and d keys. Left
-click with the mouse to cast a fireball spell next to Mia.</p>
+<p>You can control the mage using the w, a, s, and d keys. Left
+click with the mouse to cast a fireball spell next to the mage.</p>
 
 <p>Your goal is to navigate the Perilous Swamps and make it
 out the other end alive.</p>
