--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/simple-peer/9.7.0/simplepeer.min.js"></script>
 <script src="multiplayer.js"></script>
+<script src="other_player.js"></script>
 
 <style>
 html, body {
