--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/simple-peer/9.7.0/simplepeer.min.js"></script>
 <script src="multiplayer.js"></script>
 <script src="other_player.js"></script>
+<script src="random.js"></script>
 
 <style>
 html, body {
