now you can see the other player casting spells

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <script src="multiplayer.js"></script>
 <script src="other_player.js"></script>
 <script src="random.js"></script>
+<script src="other_spell.js"></script>
 
 <style>
 html, body {
