--- a/index.html
+++ b/index.html
@@ -95,6 +95,11 @@ p {
 Your browser does not support the HTML5 canvas tag.
 </canvas>
 
+<br />
+
+Music volume:
+<input type="range" id="volume" min="0" max="1" step="0.05" value="0">
+
 <h2>About</h2>
 
 <p>You can control the mage using the w, a, s, and d keys. Left
