--- a/index.html
+++ b/index.html
@@ -98,7 +98,12 @@ Your browser does not support the HTML5 canvas tag.
 <br />
 
 Music volume:
-<input type="range" id="volume" min="0" max="1" step="0.05" value="0">
+<input type="range" id="music_volume" min="0" max="1" step="0.05" value="0">
+
+<br />
+
+Sound effects volume:
+<input type="range" id="sound_volume" min="0" max="1" step="0.05" value="0">
 
 <h2>About</h2>
 
