added loading message for before Host/Guest buttons appear

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ p {
 
 <h1>Duo the Mage</h1>
 
-<div id="multiplayer_root_div"></div>
+<div id="multiplayer_root_div">Loading, please wait ...</div>
 
 <canvas id="myCanvas" width="800" height="480">
 Your browser does not support the HTML5 canvas tag.
